fixoverflow

--- a/client/src/components/Pages/UserAccount/style.module.css
+++ b/client/src/components/Pages/UserAccount/style.module.css
@@ -1,3 +1,7 @@
+* {
+  overflow-x: hidden;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -25,7 +29,7 @@
   overflow: hidden;
   position: relative;
   z-index: 4;
-  margin-top: 50px;
+  margin-top: 65px;
   box-shadow:
     0px 5px 50px 0px rgb(255, 114, 75),
     0px 0px 0px 7px rgba(246, 242, 5, 0.5);
@@ -125,6 +129,8 @@
 
 .comment-container {
   /* display: flex; */
+  background-color: #d1d1d1;
+
   margin: 20px;
   max-width: 700px;
 }
